test(moderation): atomicity 작업을 platform thread로 고정